--- a/src/app/modules/catalog/pages/list/list.component.html
+++ b/src/app/modules/catalog/pages/list/list.component.html
@@ -1,1 +1,62 @@
-<p>list works!</p>
+<div class='card'>
+    <div class='card-header'>
+      {{pageTitle}}
+    </div>
+    <div class='card-body'>
+      <div class='row'>
+        <div class='col-md-2'>Filter by:</div>
+        <div class='col-md-4'>
+          <input type='text' [(ngModel)]="listFilter"/>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col-md-6'>
+          <h4>Filtered by: {{listFilter}}</h4>
+        </div>
+      </div>
+      <div class='table-responsive'>
+        <table class='table'
+               *ngIf='products.length'>
+          <thead>
+            <tr>
+              <th>
+                <button class='btn btn-primary' (click)='toggleImage()'>
+                  {{showImage? 'Hide' :'Show'}} Image
+                </button>
+              </th>
+              <th>Product</th>
+              <th>Code</th>
+              <th>Available</th>
+              <th>Price</th>
+              <th>5 Star Rating</th>
+            </tr>
+          </thead>
+         <tbody>
+            <tr *ngFor='let product of filteredProducts'>
+              <td>
+                <img *ngIf='showImage'
+                  [src]="product.images[0].pathPicture"
+                  [title]='product.images[0].id'
+                  [style.width.px]='imageWidth'
+                  [style.magin.px]='imageMargin'
+                >
+              </td>
+              <td><a [routerLink]="['/product', product.id]">{{ product.name }}</a></td>
+              <td>{{ product.description }}</td>
+              <td>{{ product.quantityProducts }}</td>
+              <td>{{ product.unitCost | currency:'USD':'symbol':'1.2-2' }}</td>
+              <td>
+                <pm-star
+                [rating]='product.starRating'
+                (ratingClicked)='onRatingClicked($event)'
+                ></pm-star>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  
+    </div>
+  
+  </div>
+  
