--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,11 +17,9 @@
               Catalogo
             </span>
             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="/catalog/add">add product</a></li>
-                <li><a class="dropdown-item" href="/catalog/edit">edit product</a></li>
-                <li><a class="dropdown-item" href="/catalog/list">list product</a></li>
-                <li><a class="dropdown-item" href="/catalog/item">item product</a></li>
-
+                <li><a class="dropdown-item" href="catalog/add">add product</a></li>
+                <li><a class="dropdown-item" href="catalog/edit">edit product</a></li>
+                <li><a class="dropdown-item" href="catalog/list">list product</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
@@ -29,7 +27,7 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
           </li>
-        </ul>/catalog/add
+        </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
