--- a/src/app/modules/catalog/pages/item/item.component.html
+++ b/src/app/modules/catalog/pages/item/item.component.html
@@ -1,1 +1,49 @@
-<p>item works!</p>
+<div class="card" style="">
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" *ngFor="let item of product.images, index as i; first as isFirst"
+          attr.data-bs-slide-to="{{i}}"  [class.active]="isFirst" 
+           [attr.aria-current]="isFirst ? 'true' : undefined" attr.aria-label="Slide {{i}}">
+            <img [src]="item.pathPicture" alt="">
+          </button>
+
+        </div>
+        <div class="carousel-inner">
+          <div  class="carousel-item" *ngFor="let item of product.images, index as i; first as isFirst" [class.active]="isFirst">
+            <img [src]="item.pathPicture" class="d-block w-100" alt="..." >
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label </h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
+
+    <div class="card-body">
+      <h5 class="card-title">{{product.name}}</h5>
+      <p class="card-text">{{product.description}}</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">idManufacturer {{manufacturer.name}}</li>
+      <li class="list-group-item">idPProductType {{pproduct.name}}</li>
+      <li class="list-group-item">quantityProducts {{product.quantityProducts}}</li>
+      <li class="list-group-item">starRating {{product.starRating}}</li>
+      <li class="list-group-item">state {{product.state}}</li>
+      <li class="list-group-item">unitCost {{product.unitCost}}</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link"></a>
+      <a href="#" class="card-link"></a>
+    </div>
+  </div>
