--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,7 +17,7 @@
               Catalogo
             </span>
             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="catalog/add">add product</a></li>
+                <li><a class="dropdown-item" href="catalog/add/0">add product</a></li>
                 <li><a class="dropdown-item" href="catalog/edit">edit product</a></li>
                 <li><a class="dropdown-item" href="catalog/list">list product</a></li>
               <li><hr class="dropdown-divider"></li>
