--- a/src/app/shared/star.component.html
+++ b/src/app/shared/star.component.html
@@ -1,8 +1,8 @@
 <div class="crop"
-     [style.width.px]="cropWidth"
+     [style.width.px]="starWidth"
      [title]="rating"
-     (click)='onClick()'>
-  <div [style.width.px]= 'cropWidthStyle'>
+     (click)="onClick()">
+  <div style="width: 75px">
     <span class="fa fa-star"></span>
     <span class="fa fa-star"></span>
     <span class="fa fa-star"></span>
