se realiza ajustes

--- a/src/app/modules/catalog/pages/item/item.component.html
+++ b/src/app/modules/catalog/pages/item/item.component.html
@@ -43,7 +43,7 @@
       <li class="list-group-item">unitCost {{product.unitCost}}</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link"></a>
-      <a href="#" class="card-link"></a>
+      <a href="#" class="card-link">sdasd</a>
+      <button class="bg-danger" (click)="deleteItem(product.id)">Delete</button>
     </div>
   </div>
